--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
      <link rel="stylesheet" href="css/styles.css">
      <link rel="stylesheet" href="icons/css/all.css">
      <script defer src="js/app.js" type="module"></script>
+     <script defer src="js/limitText.js" type="module"></script>
 </head>
 <body>
      <header>
