--- a/index.html
+++ b/index.html
@@ -1,66 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-     <meta charset="UTF-8">
-     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Online Store</title>
-     <link rel="stylesheet" href="css/styles.css">
-     <link rel="stylesheet" href="icons/css/all.css">
-     <script defer src="js/app.js" type="module"></script>
-     <script defer src="js/limitText.js" type="module"></script>
-</head>
-<body>
-     <header>
-          <nav>
-               <ul class="category">
-                    <li><img src="icons/boot.png" alt="boots"><span>Boots</span></li>
-                    <li><img src="icons/jeans.png" alt="jeans"><span>Jeans</span></li>
-                    <li><img src="icons/shirt.png" alt="shirts"><span>Shirts</span></li>
-                    <li><img src="icons/suit.png" alt="suits"><span>Suits</span></li>
-                    <li><img src="icons/dress.png" alt="dresses"><span>Dresses</span></li>
-                    <li><img src="icons/handbag.png" alt="purses"/><span>Purses</span></li>
-               </ul>
-               <div class="menu">
-                    <div class="searchContainer">
-                         <input type="text" placeholder="Search Products ...">
-                         <i class="fa-light fa-magnifying-glass"></i>
-                    </div>
-                    <div class="userButtons">
-                         <i class="fa-thin fa-user-vneck user-icon"></i>
-                         <div class="cartContainer">
-                              <i class="fa-thin fa-bag-shopping cart"></i>
-                              <p class="cartCounter">0</p>
-                         </div>
-                    </div>
-               </div>
-          </nav>
-          <aside>
-               <div class="product-cart-container aside-items">
-                    <h3>My Cart : </h3>
-                    <div class="cart-main"></div>
-                    <div class="cart-footer">
-                         <div>Total Price : <span>0</span>$</div>
-                         <button class="clearButton">Clear</button>
-                         <button class="checkoutButton">Checkout</button>
-                    </div>
-               </div>
-          </aside>
-          <aside>
-               <div class="login-container aside-items">
-                    <div class="inputs">
-                         <i class="fa-light fa-user"></i>
-                         <input type="text" placeholder="Username" class="username">
-                    </div>
-                    <div class="inputs">
-                         <i class="fa-light fa-lock-keyhole"></i>
-                         <input type="password" placeholder="Password" class="password">
-                    </div>
-                    <input type="button" value="Login" class="login-button">
-               </div>
-          </aside>
-     </header>
-     <main></main>
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Online Store</title>
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="icons/css/all.css" />
+    <script defer src="js/app.js" type="module"></script>
+    <script defer src="js/LimitText.js" type="module"></script>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <ul class="category">
+          <li><img src="icons/boot.png" alt="boots" /><span>Boots</span></li>
+          <li><img src="icons/jeans.png" alt="jeans" /><span>Jeans</span></li>
+          <li><img src="icons/shirt.png" alt="shirts" /><span>Shirts</span></li>
+          <li><img src="icons/suit.png" alt="suits" /><span>Suits</span></li>
+          <li>
+            <img src="icons/dress.png" alt="dresses" /><span>Dresses</span>
+          </li>
+          <li>
+            <img src="icons/handbag.png" alt="purses" /><span>Purses</span>
+          </li>
+        </ul>
+        <div class="menu">
+          <div class="searchContainer">
+            <input type="text" placeholder="Search Products ..." />
+            <i class="fa-light fa-magnifying-glass"></i>
+          </div>
+          <div class="userButtons">
+            <i class="fa-thin fa-user-vneck user-icon"></i>
+            <div class="cartContainer">
+              <i class="fa-thin fa-bag-shopping cart"></i>
+              <p class="cartCounter">0</p>
+            </div>
+          </div>
+        </div>
+      </nav>
+      <aside>
+        <div class="product-cart-container aside-items">
+          <h3>My Cart :</h3>
+          <div class="cart-main"></div>
+          <div class="cart-footer">
+            <div>Total Price : <span class="totalPrice">0</span>$</div>
+            <button class="clearButton">Clear</button>
+          </div>
+        </div>
+      </aside>
+      <aside>
+        <div class="login-container aside-items">
+          <div class="inputs">
+            <i class="fa-light fa-user"></i>
+            <input type="text" placeholder="Username" class="username" />
+          </div>
+          <div class="inputs">
+            <i class="fa-light fa-lock-keyhole"></i>
+            <input type="password" placeholder="Password" class="password" />
+          </div>
+          <input type="button" value="Login" class="login-button" />
+        </div>
+      </aside>
+    </header>
+    <main></main>
+  </body>
 </html>
