--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
             <i class="fa-light fa-lock-keyhole"></i>
             <input type="password" placeholder="Password" class="password" />
           </div>
+          <p class="warningMessage">Complete the fields!</p>
+          <p class="errorMessage">Username or Password incorrect!</p>
           <input type="button" value="Login" class="login-button" />
         </div>
       </aside>
