--- a/index.html
+++ b/index.html
@@ -66,5 +66,16 @@
       </aside>
     </header>
     <main></main>
+    <footer>
+        <div>
+          <i class="fa-light fa-fingerprint"></i>
+          <p>developed by HadiKia</p>
+        </div>
+        <div>
+            <a target="_blank" href="https://www.github.com/HadiKia"><i class="fa-brands fa-github"></i></a>
+            <a target="_blank" href="https://www.linkedin.com/in/"><i class="fa-brands fa-linkedin"></i></a>
+            <a target="_blank" href="https://www.instagram.com/ihadikia"><i class="fa-brands fa-instagram"></i></a>
+        </div>
+    </footer>
   </body>
 </html>
